infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jammers-web
spec:
  selector:
    app: jammers-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
